test/types/tuple/heterogeneous/loops/forallHetTuple.good
forallHetTuple.chpl:17: error: Heterogeneous tuples don't support this style of loop yet
